--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light text-start fixed-top">
-        <a class="navbar-brand me-sm-5 me-4" href="index.php">
+<!--         <a class="navbar-brand me-sm-5 me-4" href="index.php">
             <img style="width: 55px;" src="images/logo.png" alt="">
-        </a>
+        </a> -->
         <!-- <button class="menu navbar-toggler custom-toggler ms-3 mt-2" aria-label="Main Menu Toggle navigation"
             onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
             type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar" aria-expanded="false">
