--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/bootstrap.rtl.min.css">
-    <link rel="stylesheet" href="styles/jquery.multiscroll.min.css">
-    <link rel="stylesheet" href="styles/splide.min.css">
+    <link rel="stylesheet" href="styles/jquery.multiscroll.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/all.min.js"></script>
     <script src="scripts/jQuery-library.js"></script>
-    <script src="scripts/splide-extension-auto-scroll.min.js"></script>
-    <script src="scripts/splide.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>Document</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light text-start fixed-top">
+    <nav id="navbar" class="navbar navbar-expand-md navbar-dark bg-gradient text-start fixed-top">
         <!-- <a class="navbar-brand me-sm-5 me-4" href="index.php">
             <img style="width: 55px;" src="images/logo.png" alt="">
         </a> -->
@@ -54,10 +53,10 @@
         <div class="ms-left w-100">
             <div class="ms-section first-section">
                 <div class="opaque-bg animated fadeInDown">
-                    <h1>
+                    <h1 class="myName">
                         Arshia
-                        <span class="p-1 pe-0"
-                            style="color:#FF6363; font-family: fantasy; font-size: 35px; font-style: italic;">/</span>
+                        <span class="p-1 pe-0 h2"
+                            style="color:#FF6363; font-family: fantasy; font-style: italic;">/</span>
                         Pourfar
                     </h1>
                     <p>
@@ -152,69 +151,81 @@
             </div>
 
             <div class="ms-section">
-                <div class="wrapper container">
-                    <section class="m-auto splide splide-8" aria-labelledby="carousel-heading" dir="ltr">
-                        <div class="splide__track">
-                            <ul class="splide__list">
-                                <li class="splide__slide">
-                                    <h1>Majd Photo Art</h1>
-                                    <h5>photography site</h5>
-                                    <a class="d-block" href="javascript:void(0)">
-                                        <img class="width-full vertical-site mt-3"
-                                            src="images/projectImage/majd-photo-art.png">
-                                    </a>
-                                </li>
+                <!-- Slideshow container -->
+                <div class="slideshow-container">
 
-                                <li class="splide__slide">
-                                    <h1>Imen karco</h1>
-                                    <h5>Work clothing company website</h5>
-                                    <a class="d-block" href="https://arshia-pourfar.github.io/imen-karco/">
-                                        <img class="width-full vertical-site mt-3"
-                                            src="images/projectImage/imen-karco.png">
-                                    </a>
-                                </li>
+                    <!-- Full-width images with number and caption text -->
+                    <div class="mySlides">
+                        <h1>Rock Paper Sizer</h1>
+                        <h5>Rock paper scissors game</h5>
+                        <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
+                            <img class="width-full mt-3" src="images/projectImage/majd-photo-art.png">
+                        </a>
+                    </div>
 
-                                <li class="splide__slide">
-                                    <h1>Calculator</h1>
-                                    <h5>a simple calculator</h5>
-                                    <a class="d-block" href="https://arshia-pourfar.github.io/calculator/">
-                                        <img class="width-full mt-3" src="images/projectImage/calculator.JPG">
-                                    </a>
-                                </li>
+                    <div class="mySlides">
+                        <h1>Rock Paper Sizer</h1>
+                        <h5>Rock paper scissors game</h5>
+                        <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
+                            <img class="width-full mt-3" src="images/projectImage/imen-karco.png">
+                        </a>
+                    </div>
 
-                                <li class="splide__slide">
-                                    <h1>Memory game</h1>
-                                    <h5>a game for fun</h5>
-                                    <a class="d-block" href="https://arshia-pourfar.github.io/Memory-Game/">
-                                        <img class="width-full mt-3" src="images/projectImage/memory-game.png">
-                                    </a>
-                                </li>
+                    <div class="mySlides">
+                        <h1>Rock Paper Sizer</h1>
+                        <h5>Rock paper scissors game</h5>
+                        <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
+                            <img class="width-full mt-3" src="images/projectImage/calculator.JPG">
+                        </a>
+                    </div>
 
-                                <li class="splide__slide">
-                                    <h1>XO game</h1>
-                                    <h5>XO game for two players</h5>
-                                    <a class="d-block" href="https://arshia-pourfar.github.io/XO-game/">
-                                        <img class="width-full mt-3" src="images/projectImage/XO-game.png">
-                                    </a>
-                                </li>
+                    <div class="mySlides">
+                        <h1>Rock Paper Sizer</h1>
+                        <h5>Rock paper scissors game</h5>
+                        <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
+                            <img class="width-full mt-3" src="images/projectImage/memory-game.png">
+                        </a>
+                    </div>
 
-                                <li class="splide__slide">
-                                    <h1>Rock Paper Sizer</h1>
-                                    <h5>Rock paper scissors game</h5>
-                                    <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
-                                        <img class="width-full mt-3" src="images/projectImage/rock-paper-sizer.png">
-                                    </a>
-                                </li>
+                    <div class="mySlides">
+                        <h1>Rock Paper Sizer</h1>
+                        <h5>Rock paper scissors game</h5>
+                        <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
+                            <img class="width-full mt-3" src="images/projectImage/XO-game.png">
+                        </a>
+                    </div>
 
-                            </ul>
-                        </div>
-                    </section>
+                    <div class="mySlides">
+                        <h1>Rock Paper Sizer</h1>
+                        <h5>Rock paper scissors game</h5>
+                        <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
+                            <img class="width-full mt-3" src="images/projectImage/rock-paper-sizer.png">
+                        </a>
+                    </div>
+
+                    <!-- Next and previous buttons -->
+                    <div class="d-flex justify-content-between align-content-center">
+                        <a class="prev text-decoration-none me-sm-5 me-4" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next text-decoration-none ms-sm-5 ms-4" onclick="plusSlides(1)">&#10095;</a>
+                    </div>
                 </div>
+                <br>
 
+                <!-- The dots/circles -->
+                <div style="text-align:center">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
+                    <span class="dot" onclick="currentSlide(5)"></span>
+                    <span class="dot" onclick="currentSlide(6)"></span>
+                </div>
             </div>
+            <!-- end Slider -->
 
             <div class="ms-section">
 
+                <!-- button <div data-aos="flip-left"></div> -->
             </div>
 
         </div>
@@ -226,7 +237,6 @@
         </div>
     </div>
 
-    <script src="scripts/jquery-3.2.1.min.js"></script>
     <script src="scripts/jquery.multiscroll.min.js"></script>
     <script src="scripts/script.js"></script>
     <script type="text/javascript">
@@ -235,6 +245,7 @@
         window.addEventListener('popstate', function (event) {
             history.pushState(null, document.title);
         });
+        AOS.init();
     </script>
 </body>
 
