--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <div class="mySlides">
                         <h1>Rock Paper Sizer</h1>
                         <h5>Rock paper scissors game</h5>
-                        <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
+                        <a class="d-block" href="#">
                             <img class="width-full mt-3" src="images/projectImage/majd-photo-art.png">
                         </a>
                     </div>
@@ -166,7 +166,7 @@
                     <div class="mySlides">
                         <h1>Rock Paper Sizer</h1>
                         <h5>Rock paper scissors game</h5>
-                        <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
+                        <a class="d-block" href="https://arshia-pourfar.github.io/imen-karco/">
                             <img class="width-full mt-3" src="images/projectImage/imen-karco.png">
                         </a>
                     </div>
@@ -174,7 +174,7 @@
                     <div class="mySlides">
                         <h1>Rock Paper Sizer</h1>
                         <h5>Rock paper scissors game</h5>
-                        <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
+                        <a class="d-block" href="https://arshia-pourfar.github.io/calculator/">
                             <img class="width-full mt-3" src="images/projectImage/calculator.JPG">
                         </a>
                     </div>
@@ -182,7 +182,7 @@
                     <div class="mySlides">
                         <h1>Rock Paper Sizer</h1>
                         <h5>Rock paper scissors game</h5>
-                        <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
+                        <a class="d-block" href="https://arshia-pourfar.github.io/Memory-Game/">
                             <img class="width-full mt-3" src="images/projectImage/memory-game.png">
                         </a>
                     </div>
@@ -190,7 +190,7 @@
                     <div class="mySlides">
                         <h1>Rock Paper Sizer</h1>
                         <h5>Rock paper scissors game</h5>
-                        <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
+                        <a class="d-block" href="https://arshia-pourfar.github.io/XO-game/">
                             <img class="width-full mt-3" src="images/projectImage/XO-game.png">
                         </a>
                     </div>
