--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <div class="mySlides">
                         <h1>Rock Paper Sizer</h1>
                         <h5>Rock paper scissors game</h5>
-                        <a class="d-block" href="#">
+                        <a class="d-block" href="">
                             <img class="width-full mt-3" src="images/projectImage/majd-photo-art.png">
                         </a>
                     </div>
