--- a/index.html
+++ b/index.html
@@ -156,40 +156,40 @@
 
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides">
-                        <h1>Rock Paper Sizer</h1>
-                        <h5>Rock paper scissors game</h5>
+                        <h1>Majd Photo Art</h1>
+                        <h5>photography site</h5>
                         <a class="d-block" href="">
                             <img class="width-full mt-3" src="images/projectImage/majd-photo-art.png">
                         </a>
                     </div>
 
                     <div class="mySlides">
-                        <h1>Rock Paper Sizer</h1>
-                        <h5>Rock paper scissors game</h5>
+                        <h1>Imen karco</h1>
+                        <h5>work clothing company site</h5>
                         <a class="d-block" href="https://arshia-pourfar.github.io/imen-karco/">
                             <img class="width-full mt-3" src="images/projectImage/imen-karco.png">
                         </a>
                     </div>
 
                     <div class="mySlides">
-                        <h1>Rock Paper Sizer</h1>
-                        <h5>Rock paper scissors game</h5>
+                        <h1>Calculator</h1>
+                        <h5>simple calculator</h5>
                         <a class="d-block" href="https://arshia-pourfar.github.io/calculator/">
                             <img class="width-full mt-3" src="images/projectImage/calculator.JPG">
                         </a>
                     </div>
 
                     <div class="mySlides">
-                        <h1>Rock Paper Sizer</h1>
-                        <h5>Rock paper scissors game</h5>
+                        <h1>Memory Game</h1>
+                        <h5></h5>
                         <a class="d-block" href="https://arshia-pourfar.github.io/Memory-Game/">
                             <img class="width-full mt-3" src="images/projectImage/memory-game.png">
                         </a>
                     </div>
 
                     <div class="mySlides">
-                        <h1>Rock Paper Sizer</h1>
-                        <h5>Rock paper scissors game</h5>
+                        <h1>XO game</h1>
+                        <h5></h5>
                         <a class="d-block" href="https://arshia-pourfar.github.io/XO-game/">
                             <img class="width-full mt-3" src="images/projectImage/XO-game.png">
                         </a>
@@ -197,7 +197,7 @@
 
                     <div class="mySlides">
                         <h1>Rock Paper Sizer</h1>
-                        <h5>Rock paper scissors game</h5>
+                        <h5></h5>
                         <a class="d-block" href="https://arshia-pourfar.github.io/rock_paper_sizer/">
                             <img class="width-full mt-3" src="images/projectImage/rock-paper-sizer.png">
                         </a>
